test/files/neg/macro-blackbox-structural.check
Test_2.scala:4: error: value x is not a member of Any
  println(Macros.foo.x)
                     ^
one error found
